--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "csv-parse": "^5.0.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.1",
+    "multer": "^1.4.4",
     "ts-node-dev": "^1.1.8",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
