--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.1",
     "multer": "^1.4.4",
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "swagger-ui-express": "^4.2.0",
     "ts-node-dev": "^1.1.8",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
+    "@types/swagger-ui-express": "^4.1.3",
     "@types/uuid": "^8.3.3",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
