--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "bcrypt": "^5.0.1",
     "csv-parse": "^5.0.3",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.1",
@@ -22,6 +23,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/csv-parse": "^1.2.2",
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
