--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "eslint-plugin-import-helpers": "^1.2.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.4.5",
+    "jest-canvas-mock": "^2.3.1",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.2",
     "tsconfig-paths": "^3.12.0",
