--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "bcrypt": "^5.0.1",
     "csv-parse": "^5.0.3",
+    "dayjs": "^1.10.7",
     "eslint-config-airbnb-base": "^15.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
